--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-bokeh==1.2.0
-dnspython==1.15.0
-Flask==1.0.2
-flask-pymongo==2.2.0
-gunicorn==19.9.0
-matplotlib==3.0.3
-numpy==1.16.3
-pandas==0.24.2
-pymongo==3.7.2
+bottleneck
+cx_oracle
+numexpr
+numpy
+tables
+gunicorn
+bokeh
+Flask
+matplotlib
+
